# shader-compiler

./: .gitignore  .gitmodules  CMakeLists.txt  G10 Shader Compiler.sln  G10 Shader Compiler.vcxproj  G10 Shader Compiler.vcxproj.filters  README.md  Resource.aps  Resource.rc  TODO  main.c  window.json
.github/workflows/: cmake.yml
example/: frag.glsl  vert.glsl
